--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -1,5 +1,72 @@
 .footer
-    p Футер
+    .footer__top
+        .footer__item
+            .footer__column
+                ul.phone-block
+                    li
+                        a(href="tel:84952668525").phone-recall 8 495 266-85-25
+                    li
+                        span.phone-article звоните ежедневно 24/7
+
+            .footer__column
+                .adresinfo г. Москва, Пресненская набережная, д. 6 строение 2
+
+            .footer__column
+                form.search(action="#")
+                    input(type="text" placeholder="Например сделать ключ BMW X6").inp-search
+                    button(type="submit").btngreen Найти
+
+                button(type="button").btn-recall Вызвать мастера
+
+        .footer__item
+            .footer__column
+                ul.footer__list
+                    li
+                        a(href="#") О компании
+                    li
+                        a(href="#") Наши мастера
+                    li
+                        a(href="#") Цены на ремонт
+                    li
+                        a(href="#") Контакты
+
+            .footer__column
+                ul.footer__list
+                    li
+                        a(href="#") Изготовление ключей
+                    li
+                        a(href="#") Изготовление чипов
+                    li
+                        a(href="#") Изготовление дубликата ключей
+                    li
+                        a(href="#") Изготовление чипов
+
+            .footer__column
+                ul.footer__list
+                    li
+                        a(href="#") Изготовление ключей
+                    li
+                        a(href="#") Изготовление чипов
+                    li
+                        a(href="#") Изготовление дубликата ключей
+                    li
+                        a(href="#") Изготовление чипов
+
+                ul.footer__list
+                    li
+                        a(href="#") Изготовление ключей
+                    li
+                        a(href="#") Изготовление чипов
+                    li
+                        a(href="#") Изготовление дубликата ключей
+                    li
+                        a(href="#") Изготовление чипов
+
+
+    .footer__bottom
+        .copyright 2007 - 2019 © Ключи зажигания
+        .metr 
+            img(src="img/metr.jpg")
 
 
 
